# navier-stokes

./: CMakeLists.txt  README.md  config.h  fluid_simulation.cu  kernels.cu  kernels.cuh
